--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.mobilecheck.assessment">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!--<uses-permission android:name="com.google.android.things.permission.MANAGE_UPDATE_POLICY" />-->
+    <!--<uses-permission android:name="com.google.android.things.permission.MANAGE_UPDATE_POLICY"/>-->
     <!-- <uses-permission android:name="com.google.android.things.permission.PERFORM_UPDATE_NOW" />-->
     <application
             android:allowBackup="true"
@@ -13,6 +13,9 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="GoogleAppIndexingWarning">
+       <!-- <uses-library android:name="com.google.android.things"
+                      android:required="false"
+                      tools:replace="android:required"/>-->
         <activity android:name=".activity.DetailActivity"
                   android:screenOrientation="portrait">
         </activity>
