--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.mobilecheck.assessment">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!--<uses-permission android:name="com.google.android.things.permission.MANAGE_UPDATE_POLICY"/>-->
-    <!-- <uses-permission android:name="com.google.android.things.permission.PERFORM_UPDATE_NOW" />-->
+    <!--<uses-permission android:name="com.google.android.things.permission.MANAGE_UPDATE_POLICY"/>
+    --><!-- <uses-permission android:name="com.google.android.things.permission.PERFORM_UPDATE_NOW" />-->
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,7 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="GoogleAppIndexingWarning">
-       <!-- <uses-library android:name="com.google.android.things"
+        <!--<uses-library android:name="com.google.android.things"
                       android:required="false"
                       tools:replace="android:required"/>-->
         <activity android:name=".activity.DetailActivity"
@@ -29,6 +29,11 @@
         </activity>
         <activity android:name=".activity.MainActivity"
                   android:screenOrientation="portrait">
+            <!--<intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.HOME"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>-->
         </activity>
     </application>
 
