--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.mobilecheck.assessment">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!--<uses-permission android:name="com.google.android.things.permission.MANAGE_UPDATE_POLICY"/>
-    --><!-- <uses-permission android:name="com.google.android.things.permission.PERFORM_UPDATE_NOW" />-->
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -13,9 +11,6 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar"
             tools:ignore="GoogleAppIndexingWarning">
-        <!--<uses-library android:name="com.google.android.things"
-                      android:required="false"
-                      tools:replace="android:required"/>-->
         <activity android:name=".activity.DetailActivity"
                   android:screenOrientation="portrait">
         </activity>
@@ -28,13 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity"
-                  android:screenOrientation="portrait">
-            <!--<intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.HOME"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>-->
-        </activity>
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
